# holohub

./: .gitignore  License  README.md
backend/: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  test_register.json
backend/alembic/: env.py
backend/alembic/versions/: add_invoice_model.py  add_user_settings.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  assets.py  auth.py  billing.py  devices.py  organizations.py  playlists.py  router.py  settings.py  users.py
backend/app/core/: config.py  row_level_security.py  security.py
backend/app/db/: base.py  redis.py
backend/app/models/: __init__.py  asset.py  audit_log.py  device.py  device_playlist.py  invoice.py  organization.py  playlist.py  user.py  user_settings.py
backend/app/schemas/: __init__.py  asset.py  common.py  device.py  organization.py  playlist.py  settings.py  token.py  user.py
backend/app/tests/: conftest.py
backend/app/tests/factories/: __init__.py  asset.py  device.py  playlist.py  user.py
backend/docker/: Dockerfile.api
backend/postman/: HoloHub_API.postman_collection.json
backend/scripts/: create_billing_tables.py  init_db.py
device-client/: README.md  config.example.txt  main.py  requirements.txt  test_connection.py  test_display.py
device-client/config/: __init__.py  config.py
device-client/src/: __init__.py  api_client.py  content_manager.py  display_manager.py  model_loader.py  playlist_fetcher.py  system_metrics.py
frontend/: .env.local.example  .eslintrc.json  .gitignore  README.md  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/app/(dashboard)/assets/: page.tsx
frontend/app/(dashboard)/dashboard/: page.tsx
frontend/components/: providers.tsx
frontend/components/assets/: AssetCard.tsx  AssetFilters.tsx  AssetGrid.tsx  AssetUploader.tsx  ThreeDPreview.tsx  index.ts
frontend/components/auth/: LoginForm.tsx  ProtectedRoute.tsx  RegisterForm.tsx  index.ts
frontend/components/dashboard/: DashboardHeader.tsx  DashboardLayout.tsx  Sidebar.tsx  index.ts
frontend/components/devices/: DeviceCommandPanel.tsx  DeviceHealthCard.tsx  DeviceMap.tsx  DeviceStatusBadge.tsx  DeviceTable.tsx  index.ts
frontend/components/playlists/: PlaylistCard.tsx  PlaylistEditor.tsx  index.ts
frontend/components/settings/: DeleteConfirmDialog.tsx  EditUserModal.tsx  InviteUserModal.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  color-picker.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  progress.tsx  scroll-area.tsx  select.tsx  separator.tsx  switch.tsx  table.tsx  tabs.tsx  timezone-select.tsx  toast.tsx
frontend/hooks/: use-toast.ts  useSettings.ts
frontend/lib/api/: assets.ts  auth.ts  billing.ts  client.ts  devices.ts  index.ts  organizations.ts  playlists.ts  settings.ts  users.ts
frontend/lib/store/: authStore.ts  index.ts  organizationStore.ts  settingsStore.ts  uiStore.ts
frontend/types/: index.ts  models.ts  settings.ts
(+13 files in other folders)
